[tool.poetry]
name = "cloudinfra"
version = "0.1.0"
description = ""
authors = ["Jonas Rosenboom <jrosenboom@checkpoint.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
jmespath = "^1.0.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
